Add upstream details controller and commands
